--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,15 @@
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+        android:id="@+id/textView1" />
+
+
+
+    <TextView android:text="----------Hello World!"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:layout_below="@id/textView1"
         android:id="@+id/textView2" />
     <Button
         android:layout_width="wrap_content"
@@ -20,6 +26,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <!--<EditText-->
         <!--android:layout_width="wrap_content"-->
