--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,28 +10,45 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
 
-
-
-    <TextView android:text="----------Hello World!"
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/scrollViewTop"
+        android:layout_below="@+id/textView1"
+        android:layout_alignParentTop="true"
+        />
 
-        android:layout_below="@id/textView1"
-        android:id="@+id/textView2" />
+    <!--<TextView android:text="&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Hello World!"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+
+        <!--android:layout_below="@id/textView1"-->
+        <!--android:id="@+id/textView2" />-->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="update"
+        android:text="Update"
         android:id="@+id/buttonUpdate"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ShowLocations"
+        android:id="@+id/buttonShowLocations"
+        android:layout_alignLeft="@id/buttonUpdate"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+
+        />
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
-        android:layout_below="@+id/textView2"
+        android:id="@+id/scrollViewBottom"
+        android:layout_below="@+id/scrollViewTop"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
