--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+    <TextView android:text="Hello We0rld!" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollViewTop"
-        android:layout_below="@+id/textView1"
-        android:layout_alignParentTop="true"
-        />
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
 
-    <!--<TextView android:text="&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Hello World!"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
+        android:layout_weight="1"
 
-        <!--android:layout_below="@id/textView1"-->
-        <!--android:id="@+id/textView2" />-->
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Update"
-        android:id="@+id/buttonUpdate"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:gravity="top"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ShowLocations"
-        android:id="@+id/buttonShowLocations"
-        android:layout_alignLeft="@id/buttonUpdate"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        <Button style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update"
 
-        />
+            android:layout_weight="5"
+            android:id="@+id/buttonUpdate"
+            />
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollViewBottom"
-        android:layout_below="@+id/scrollViewTop"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
 
-    <!--<EditText-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/editText"-->
-        <!--android:layout_below="@+id/textView"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
+            android:maxHeight="2dp"
 
+            android:text="ShowLocations"
+            android:id="@+id/buttonShowLocations"
+            android:layout_alignLeft="@id/buttonUpdate"
+            />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:orientation="vertical"
+        android:layout_weight="5"
+android:gravity="bottom"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
+
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="top"
+            android:id="@+id/scrollViewTop">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewOnChanged"
+                android:text="testiasf  sdafsdf k kashf kasdfjk akfjadfjaldfjk  dahfljasdhfjaksfha  fkjh jsdafkjdfakjf askf dfka fjka dfjhajdkf j hfh sdj fjk g testiasf  sdafsdf k kashf kasdfjk akfjadfjaldfjk  dahfljasdhfjaksfha  fkjh jsdafkjdfakjf askf dfka fjka dfjhajdkf j hfh sdj fjk g testiasf  sdafsdf k kashf kasdfjk akfjadfjaldfjk  dahfljasdhfjaksfha  fkjh jsdafkjdfakjf askf dfka fjka dfjhajdkf j hfh sdj fjk g"
+                />
+
+
+        </ScrollView>
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="bottom"
+            android:layout_below="@id/scrollViewTop"
+            android:id="@+id/scrollViewBottom">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewAppend"
+                android:text="qqqqqqqqqqqqq wwwwwwwwwwwwwwwwwww eeeeeeeeeeeeeeeeeeeee rrrrrrrrrrrrrrrrrrrrrrr tttttttttttttttttttttt yyyyyyyyyyyyyyyyyyyyy uuuuuuuuuuuuuuuuuuuuuu"
+                />
+
+        </ScrollView>
+
+
+    </LinearLayout>
 
 
 
