--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,13 @@
             android:id="@+id/buttonShowLocations"
             android:layout_alignLeft="@id/buttonUpdate"
             />
-
+        <Button style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send"
+            android:layout_weight="1"
+            android:id="@+id/buttonSend"
+            />
     </LinearLayout>
 
 
